--- a/src/components/_popups/market/Error/styles.module.scss
+++ b/src/components/_popups/market/Error/styles.module.scss
@@ -15,7 +15,7 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        height: 20%;
+        min-height: 20%;
         width: 25%;
         background: $primaryGrey;
         border: 2px solid #c40c0c;
@@ -25,10 +25,12 @@
         animation: appear 800ms;
 
         & p {
-            position: relative;
-            top: 25%;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
             text-align: center;
-            font-size: 2rem;
+            font-size: 1.5rem;
             color: #c40c0c;
         }
     }
