--- a/src/components/MarketInstruments/styles.module.scss
+++ b/src/components/MarketInstruments/styles.module.scss
@@ -92,6 +92,7 @@
                         transition: all 0.3s;
                         display: inline-block;
                         margin: 0.5rem;
+                        background: #000;
                     }
 
                     & input[type='text'] {
