--- a/src/components/History/styles.module.scss
+++ b/src/components/History/styles.module.scss
@@ -1,14 +1,16 @@
 @import '../../theme/palette.scss';
 
 .container {
-    height: 700px;
+    height: 650px;
 
     padding: 0 0.5rem;
 
     display: grid;
     grid-template-columns: auto 400px;
-    grid-template-rows: 50px 650px;
+    grid-template-rows: 50px 600px;
     grid-column-gap: 1rem;
+
+    border: 1px solid red;
 
     & .switchButtonsContainer {
         grid-row: 1;
@@ -51,7 +53,7 @@
         grid-row: 2;
 
         width: 100%;
-        height: 650px;
+        height: 600px;
         background: $primaryGrey;
         border: 1px solid $secondaryGrey;
         border-radius: 8px;
@@ -110,8 +112,10 @@
             grid-row: 1;
             grid-column: 1 / 3;
 
-            line-height: 2rem;
+            line-height: 1.2rem;
             font-size: 0.9rem;
+
+            padding: 0 1rem;
         }
 
         & .secondTitle {
@@ -119,7 +123,9 @@
             grid-column: 1;
 
             line-height: 2rem;
-            font-size: 0.9rem;
+            font-size: 0.8rem;
+
+            padding: 0 1rem;
         }
 
         & .thirdTitle {
@@ -127,7 +133,9 @@
             grid-column: 2;
 
             line-height: 2rem;
-            font-size: 0.9rem;
+            font-size: 0.8rem;
+
+            padding: 0 1rem;
         }
     }
 }
