--- a/src/components/Settings/styles.module.scss
+++ b/src/components/Settings/styles.module.scss
@@ -1,95 +1,100 @@
 @import '../../theme/palette.scss';
 
-.settingsContainer {
+.container {
     position: absolute;
-    bottom: 0;
-    width: 60vw;
-    height: calc(100vh - 21.5rem);
-    background: #000000;
-    border-top: 1px solid $secondaryGreen;
-    border-right: 1px solid $secondaryGreen;
+    bottom: 1rem;
 
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 2rem;
+    display: grid;
+    grid-template-columns: 70% 30%;
+    grid-template-rows: auto auto auto auto auto;
 
-    z-index: 13;
+    width: 18.5rem;
+    height: 19rem;
+
+    background: $paletteGrey2;
+
+    padding: 0.5rem 1rem;
+    margin: 0 0.3rem;
+
+    border-radius: 4px;
 
     animation: appear 500ms;
 
     & .title {
-        margin-left: 2rem;
-        font-size: 1.2rem;
-        color: $secondaryGreen;
+        padding: 0.5rem;
+        font-size: 1rem;
     }
 
-    & .switchLabel {
-        padding-bottom: 1rem;
-        margin: 1rem;
+    & .closeButton {
+        align-self: start;
+        justify-self: end;
+
+        width: 1.2rem;
+        height: 1.2rem;
     }
 
-    & .toggleBlock {
-        display: flex;
-        align-items: center;
+    & .nicknameChange,
+    .emailChange {
+        cursor: pointer;
 
-        & span {
-            padding: 0;
+        align-self: center;
+        justify-self: end;
+
+        width: 4.2rem;
+
+        padding: 0.3rem 0.5rem;
+
+        font-size: 0.9rem;
+        color: $paletteGreen1;
+        text-align: center;
+
+        border: 1px solid $paletteGreen1;
+        border-radius: 4px;
+
+        &:hover {
+            color: $paletteWhite;
+            background: $paletteGreen1;
         }
     }
 
-    & .inputsBlock {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding: 0.5rem 5rem 0.5rem 0;
-
-        & span {
-            width: 25%;
-        }
+    & .email,
+    .nickname {
+        color: $paletteGrey3;
+        font-size: 0.8rem;
 
         & input {
-            background: transparent;
-            color: $secondaryGreen;
             border: none;
-            font-size: 1rem;
-        }
-
-        & button {
-            width: 104px;
-            height: 2rem;
-            background: transparent;
-            cursor: pointer;
-
-            border: 1px solid #f4ba26;
-            color: #f4ba26;
-            box-sizing: border-box;
             border-radius: 4px;
+            background: $paletteGrey1;
+            padding: 0.4rem;
+            margin: 0.4rem 0 0 -0.4rem;
 
-            &:hover {
-                border: 1px solid #f4ba26;
-                background: #f4ba26;
-                color: black;
+            color: $paletteWhite;
+            font-style: 1rem;
+
+            &:disabled {
+                background: transparent;
             }
         }
     }
 
-    & .testButton {
-        width: 104px;
-        height: 33px;
-        background: transparent;
-        cursor: pointer;
+    & .notifications,
+    .autoLaunch {
+        color: $paletteGrey3;
+        font-size: 0.8rem;
 
-        border: 1px solid #f4ba26;
-        color: #f4ba26;
-        box-sizing: border-box;
-        border-radius: 4px;
+        align-self: center;
 
-        &:hover {
-            border: 1px solid #f4ba26;
-            background: #f4ba26;
-            color: black;
+        & p {
+            color: $paletteWhite;
+            font-size: 1rem;
         }
+    }
+
+    & .notificationsSwitch,
+    .autoLaunchSwitch {
+        align-self: center;
+        justify-self: end;
     }
 }
 
