--- a/src/components/FirstTimeUX/styles.module.scss
+++ b/src/components/FirstTimeUX/styles.module.scss
@@ -8,7 +8,21 @@
     height: 100%;
     background: #000000d0;
     z-index: 14;
-    animation: appear 300ms;
+
+    & * {
+        transition: all 0s;
+    }
+
+    & .closeButton {
+        cursor: pointer;
+
+        position: absolute;
+        top: 17%;
+        left: 75.5%;
+
+        height: 1.5rem;
+        width: 1.5rem;
+    }
 
     & .item {
         position: absolute;
@@ -16,62 +30,112 @@
         left: 50%;
         transform: translate(-50%, -50%);
 
-        height: 80%;
-        width: 80%;
+        height: 60%;
+        width: 50%;
 
-        border: 1.5px solid $secondaryGreen;
-        border-radius: 5px;
+        padding-top: 2rem;
 
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: 100% 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-end;
 
-        & .buttonContainer {
-            display: flex;
-            position: absolute;
-            top: 103%;
-            margin: 0 auto;
+        border-radius: 8px;
+
+        background: $paletteGrey2;
+
+        & .title {
+            font-size: 1.5rem;
+
+            & span {
+                color: $paletteGreen2;
+            }
+        }
+
+        & .text {
+            width: 80%;
+            margin: 1% 0;
+
+            text-align: center;
+            font-size: 0.9rem;
+            color: $paletteGrey3;
+        }
+
+        & .imageBox {
             width: 100%;
-            justify-content: space-around;
-            padding: 0 25rem;
+            height: 30%;
 
-            & button {
-                cursor: pointer;
-                background: transparent;
-                border-radius: 360px;
-                border: 1px solid $secondaryGreen;
-                color: $secondaryGreen;
-                font-size: 1.5rem;
-                width: 2rem;
-                height: 2rem;
+            margin: 5% 0;
 
-                &:hover {
-                    background: $secondaryGreen;
-                    color: #000;
+            display: flex;
+            justify-content: center;
+
+            & .actionImage {
+                transform: scale(1.5);
+                z-index: 2;
+            }
+        }
+
+        & .bonusesContainer {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+
+            margin-bottom: 1rem;
+
+            & .bonusItem {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: space-evenly;
+
+                height: 11rem;
+
+                padding: 0.5rem;
+
+                margin: 0.5rem;
+                width: 10rem;
+
+                border: 1px solid $paletteGrey3;
+                border-radius: 4px;
+
+                & img {
+                    margin: 0 0 0.5rem;
                 }
             }
         }
-    }
 
-    & .close {
-        position: relative;
-        left: 88.5%;
-        top: 8%;
-        text-align: center;
-        line-height: 1.8rem;
+        & button {
+            cursor: pointer;
 
-        cursor: pointer;
-        background: $primaryGrey;
-        border-radius: 360px;
-        border: 1px solid $secondaryGreen;
-        color: $secondaryGreen;
-        font-size: 1rem;
-        width: 2rem;
-        height: 2rem;
+            margin: 3% 0;
+            padding: 1rem 0;
 
-        &:hover {
-            background: $secondaryGreen;
-            color: #000;
+            width: 11rem;
+
+            background: $paletteGreen1;
+
+            border: none;
+            border-radius: 4px;
+
+            color: $paletteWhite;
+            line-height: 1rem;
+
+            &:hover {
+                background: $paletteGreen2;
+            }
+        }
+
+        & .statusBar {
+            margin: 1% 0 0;
+            padding: 0.5rem 1rem;
+
+            text-align: center;
+            font-size: 0.9rem;
+
+            border-bottom: 2px solid $paletteWhite;
+
+            transition: width 0.2s;
         }
     }
 }
