--- a/src/components/_popups/market/Buy/styles.module.scss
+++ b/src/components/_popups/market/Buy/styles.module.scss
@@ -6,7 +6,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: #00000083;
+    background: #000000e1;
     z-index: 14;
 
     & .star {
@@ -40,6 +40,16 @@
         & img {
             filter: brightness(0) invert(1);
         }
+    }
+
+    & .close {
+        cursor: pointer;
+
+        position: absolute;
+        top: 20%;
+        left: 76%;
+
+        width: 1.5rem;
     }
 
     & .container {
