--- a/src/components/UserItem/styles.module.scss
+++ b/src/components/UserItem/styles.module.scss
@@ -2,107 +2,88 @@
 
 .container {
     cursor: pointer;
+
+    height: 100%;
+    max-height: 295px;
+    width: 15rem;
+
     display: flex;
     flex-direction: column;
-    flex-wrap: nowrap;
-    justify-content: space-between;
 
-    height: 49%;
-    width: 28%;
-    min-width: 201px;
-    min-height: 250px;
-    margin: 0.8rem 1%;
+    border-radius: 8px;
 
-    border-radius: 5px;
-    border: 1px solid $lightGrey;
+    background: $paletteGrey2;
 
-    animation: appear 300ms;
+    & .itemImg {
+        width: 100%;
+        height: 58%;
 
-    & .priceContainer {
+        border-radius: 8px 8px 0 0;
+    }
+
+    & .title {
+        margin: 0.5rem 1rem;
+
+        display: block;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        width: 13rem;
+
+        font-size: 1.2rem;
+    }
+
+    & .itemInfo {
         display: flex;
-        justify-content: space-between;
+        justify-content: flex-start;
         align-items: center;
-        padding: 0.5rem 5%;
 
-        height: 15%;
-        background: $secondaryGrey;
-        border-radius: 5px 5px 0 0;
+        height: 2rem;
 
-        & .gameLogo {
-            width: 25%;
-            filter: invert(1);
-            min-height: 0;
-            margin: 0 auto;
+        margin-left: 1rem;
+
+        font-size: 0.7rem;
+        color: $paletteGrey3;
+
+        & img {
+            width: 2rem;
+            height: 2rem;
+            padding: 0.2rem;
+
+            margin-right: 0.5rem;
+
+            background: #000;
+        }
+
+        & p {
+            overflow-y: hidden;
+            height: 1.7rem;
         }
     }
 
-    & .infoContainer {
+    & .actionsContainer {
         display: flex;
-        flex-direction: column-reverse;
-        justify-content: space-between;
+        justify-content: center;
 
-        background-size: cover;
-        background-position: center;
-        height: 85%;
-        border-radius: 0 0 5px 5px;
+        margin: 0.5rem 1rem;
 
-        & .label {
-            background: $secondaryGreen;
-            clip-path: polygon(100% 0, 65% 0, 100% 100%);
-            width: 100%;
-            height: 35%;
-            text-align: right;
-            padding: 0.5rem;
-        }
+        & .button {
+            cursor: pointer;
+            width: 80%;
+            padding: 0.3rem 0.5rem;
 
-        & .info {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: space-evenly;
+            text-align: center;
 
-            height: 40%;
-            padding: 0.5rem 0;
-            background-image: linear-gradient(transparent, black 80%);
-            border-radius: 0 0 5px 5px;
+            font-size: 0.9rem;
+            color: $paletteWhite;
 
-            & .itemName {
-                text-align: center;
+            background: $paletteGreen1;
 
-                &:last-of-type {
-                    width: 60%;
-                    height: 1rem;
-                    margin: 0.2rem 0 0.4rem;
-                    text-overflow: ellipsis;
-                    white-space: nowrap;
-                    overflow: hidden;
-                    font-size: 0.8rem;
-                }
-            }
+            border: 1px solid $paletteGreen1;
+            border-radius: 4px;
 
-            & .actionButton {
-                cursor: pointer;
-                width: 45%;
-                border: 1px solid #fff;
-                background: transparent;
-                color: #fff;
-                height: 1.8rem;
-                border-radius: 5px;
-
-                &:hover {
-                    border: 1px solid $secondaryGreen;
-                    background: $secondaryGreen;
-                }
-            }
-
-            & .notTradable {
-                border: 1px solid $lightGrey;
-                color: $lightGrey;
-                height: 1.8rem;
-                line-height: 1.8rem;
-                font-size: 0.8rem;
-                padding: 0 0.5rem;
-                border-radius: 5px;
+            &:hover {
+                background: $paletteGreen2;
             }
         }
     }
