--- a/src/components/Dashboard/styles.module.scss
+++ b/src/components/Dashboard/styles.module.scss
@@ -15,7 +15,8 @@
     align-content: center;
 
     & .title {
-        margin: 0.5rem 2rem;
+        margin: 0.7rem 2rem;
+        font-size: 1.2rem;
     }
 
     & .userProgress {
